--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-Welcome to the Mystery Bookstore
+Welcome to the Mystery Books store! There are {{ count }} books in stock.
 </body>
 </html>
